# hifisampler

./: .gitignore  README.md  README_zh_cn.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: build-multiplatform-release.yml  build-portable-release.yml
backend/: models.py  resampler.py
client/: Program.cs
docs/: RELEASING.md
hnsep/: convert_hnsep_to_onnx.py
portable/: CHECK_ENVIRONMENT.bat  HIFISAMPLER_MANAGER.bat  INSTALL_TO_OPENUTAU.bat  PREPARE_PORTABLE.bat  START_HIFISAMPLER.bat  check_environment.sh  config.default.yaml  config.yaml  prepare_portable.sh  start.sh
portable/manager/: check_environment.py  gui.py  install_openutau.py  model_profiles.py  prepare_portable.py  repair_config.py
portable/models/lofi_vocoder/: model.profile.yaml
portable/models/pc_nsf/: model.profile.yaml
scripts/: build_portable_release.ps1  build_release.py  test_hnsep_onnx.py
util/: audio.py  cache_manager.py  hnsep.py  load_config_from_yaml.py  model_loader.py  stft_numpy.py  utils.py  wav2mel.py
