[project]
name = "hifisampler"
version = "0.0.6"
description = "A new UTAU resampler based on pc-nsf-hifigan and straycatresampler for virtual singer."
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "filelock>=3.17.0",
    "librosa>=0.10.2.post1",
    "numpy>=2.1.3",
    "onnxruntime>=1.22.0",
    "praat-parselmouth>=0.4.5",
    "pyloudnorm>=0.1.1",
    "pyyaml>=6.0.2",
    "resampy>=0.4.3",
    "ruamel-yaml>=0.18.10",
    "scipy>=1.15.2",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "customtkinter>=5.2.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
